tests/snapshots/repo_intelligence/repo_projected_page_index_node_modelica_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
expression: value
---
{
  "hit": {
    "doc_id": "reference/projectionica-controllers-pi-ffe3c92ffb7b",
    "line_range": [
      19,
      28
    ],
    "node_id": "reference/projectionica-controllers-pi-ffe3c92ffb7b#anchors",
    "node_title": "Anchors",
    "page_id": "repo:modelica-projected-index-node:projection:reference:symbol:repo:modelica-projected-index-node:symbol:Projectionica.Controllers.PI",
    "page_kind": "reference",
    "page_title": "Projectionica.Controllers.PI",
    "path": "reference/projectionica-controllers-pi-ffe3c92ffb7b.md",
    "repo_id": "modelica-projected-index-node",
    "structural_path": [
      "Overview",
      "Anchors"
    ],
    "text": ":ID: anchors\n:PATHS: Controllers/PI.mo, Controllers/package.mo\n\nModules:\n- `Projectionica.Controllers` (Controllers/package.mo)\n\nSymbols:\n- `Projectionica.Controllers.PI` (Controllers/PI.mo)"
  },
  "repo_id": "modelica-projected-index-node"
}
