tests/snapshots/repo_intelligence/repo_projected_page_index_node_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/../support/repo_intelligence.rs
expression: value
---
{
  "hit": {
    "doc_id": "reference/solve-41db401ae519",
    "line_range": [
      18,
      24
    ],
    "node_id": "reference/solve-41db401ae519#anchors",
    "node_title": "Anchors",
    "page_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
    "page_kind": "reference",
    "page_title": "solve",
    "path": "reference/solve-41db401ae519.md",
    "repo_id": "projection-sample",
    "structural_path": [
      "Overview",
      "Anchors"
    ],
    "text": ":ID: anchors\n:PATHS: src/ProjectionPkg.jl\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)"
  },
  "repo_id": "projection-sample"
}
