tests/snapshots/repo_intelligence/repo_projected_page_index_tree_modelica_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
expression: value
---
{
  "repo_id": "modelica-projected-index-tree",
  "tree": {
    "doc_id": "reference/projectionica-controllers-pi-851851cfdca7",
    "kind": "reference",
    "page_id": "repo:modelica-projected-index-tree:projection:reference:symbol:repo:modelica-projected-index-tree:symbol:Projectionica.Controllers.PI",
    "path": "reference/projectionica-controllers-pi-851851cfdca7.md",
    "repo_id": "modelica-projected-index-tree",
    "root_count": 2,
    "roots": [
      {
        "children": [],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/projectionica-controllers-pi-851851cfdca7#projectionica-controllers-pi",
        "structural_path": [
          "Projectionica.Controllers.PI"
        ],
        "summary": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_annotation\n:END:",
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_annotation\n:END:",
        "title": "Projectionica.Controllers.PI",
        "token_count": 8
      },
      {
        "children": [
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              19,
              28
            ],
            "node_id": "reference/projectionica-controllers-pi-851851cfdca7#anchors",
            "structural_path": [
              "Overview",
              "Anchors"
            ],
            "summary": ":ID: anchors\n:PATHS: Controllers/PI",
            "text": ":ID: anchors\n:PATHS: Controllers/PI.mo, Controllers/package.mo\n\nModules:\n- `Projectionica.Controllers` (Controllers/package.mo)\n\nSymbols:\n- `Projectionica.Controllers.PI` (Controllers/PI.mo)",
            "title": "Anchors",
            "token_count": 13
          },
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              29,
              34
            ],
            "node_id": "reference/projectionica-controllers-pi-851851cfdca7#sources",
            "structural_path": [
              "Overview",
              "Documentation"
            ],
            "summary": ":ID: sources\n:PATHS: Controllers/PI",
            "text": ":ID: sources\n:PATHS: Controllers/PI.mo#annotation.documentation\n\nDocumentation:\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)",
            "title": "Documentation",
            "token_count": 9
          }
        ],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          8,
          18
        ],
        "node_id": "reference/projectionica-controllers-pi-851851cfdca7#overview",
        "structural_path": [
          "Overview"
        ],
        "summary": ":ID: overview\n:PATHS: Controllers/PI",
        "text": ":ID: overview\n:PATHS: Controllers/PI.mo, Controllers/PI.mo#annotation.documentation\n\nProjected reference page for `Projectionica.Controllers.PI`.\nFormat hints:\n- `modelica_annotation`\nSource paths:\n- `Controllers/PI.mo`\n- `Controllers/PI.mo#annotation.documentation`",
        "title": "Overview",
        "token_count": 20
      }
    ],
    "title": "Projectionica.Controllers.PI"
  }
}
